# KnowIT

./: .gitignore  Cargo.toml  userconfig.cfg
Examples/: sample_quiz.csv
src/: app.rs  config.rs  main.rs  quiz.rs  ui.rs
