[package]
name = "quiz_app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.22.0", features = ["default_fonts"] }
egui = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
chrono = "0.4"
rfd = "0.11"
rand = "0.8"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
log = "0.4"
simplelog = "0.12"
dirs = "5"